...
              EditEventForSerieScreenTestTags.FOR_EACH_INPUT_EVENT_LOCATION_SUGGESTION,
          inputEventDuration = EditEventForSerieScreenTestTags.INPUT_EVENT_DURATION,
          buttonSaveEvent = EditEventForSerieScreenTestTags.BUTTON_SAVE_EVENT,
          errorMessage = EditEventForSerieScreenTestTags.ERROR_MESSAGE)

  EventForSerieFormScreen(
      title = "Edit Event for Serie",
      formState = uiState,
      isFormValid = uiState.isValid,
      testTags = testTags,
      onTypeChange = { editEventForSerieViewModel.setType(it) },
      onTitleChange = { editEventForSerieViewModel.setTitle(it) },
      onDescriptionChange = { editEventForSerieViewModel.setDescription(it) },
...
        if (success) {
          onDone()
        }
        success
      },
      onGoBack = onGoBack,
      saveButtonText = "SAVE CHANGES")
}

